Added package for teapot-ui

--- a/package/Config.in
+++ b/package/Config.in
@@ -376,6 +376,7 @@ endif
 	source "package/usbutils/Config.in"
 	source "package/w_scan/Config.in"
 	source "package/wipe/Config.in"
+	source "package/teapotd/Config.in"
 endmenu
 
 menu "Interpreter languages and scripting"
