--- a/configs/teapot_defconfig
+++ b/configs/teapot_defconfig
@@ -22,6 +22,7 @@ BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_TEAPOTD=y
 BR2_PACKAGE_NSS_MDNS=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
